# crystal

./: .env.example  Cargo.toml  Makefile  README.md  architecture.mdj
crystal-api-core/: Cargo.toml
crystal-app/: .env.example  .gitignore  README.md  craco.config.js  package-lock.json  package.json  tsconfig.json
crystal-app/.cargo/: config.example
crystal-app/src/: App.css  App.tsx  index.tsx
crystal-app/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
crystal-app/src-tauri/src/: cmd.rs  main.rs
crystal-app/src/leagueEvents/: index.ts  types.ts
crystal-app/src/store/: createStore.ts  index.ts  rootReducer.ts  rootSaga.ts
crystal-app/src/utils/: types.ts
crystal-core/: Cargo.toml
crystal-core/src/: lib.rs  main.rs
crystal-core/src/events/: league_client.rs  league_events.rs  league_server.rs  lockfile.rs  mod.rs
crystal-core/src/handlers/: api.rs  lockfile.rs  mod.rs  utils.rs
crystal-core/src/lockfile/: mod.rs
league-client/: Cargo.toml  README copy.md  README.md
league-client-ts/: README.md  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
league-client-ts/src/: api.ts  index.ts
league-client/docs/: ActiveBoostsLcdsStoreFulfillmentNotification.md  ActiveBoostsLcdsSummonerActiveBoostsDto.md  AggregationType.md  AlertDto.md  AllPublicSummonerDataDto.md  AllSummonerData.md  BannedChampion.md  BasePlayerDto.md  BasePublicSummonerDto.md  BasicOperatingSystemInfo.md  BasicSystemInfo.md  BindingAsyncCancelEvent.md  BindingAsyncFailureEvent.md  BindingAsyncState.md  BindingCallbackEvent.md  BindingFullApiHelp.md  BindingFullArgumentHelp.md  BindingFullEnumValueHelp.md  BindingFullEventHelp.md  BindingFullFieldHelp.md  BindingFullFunctionHelp.md  BindingFullTypeHelp.md  BindingFullTypeIdentifier.md  BindingGenericAsyncEvent.md  BindingGenericEvent.md  BindingHelpFormat.md  BoostTeamSkinRentalDto.md  Bracket.md  BracketMatch.md  BracketRoster.md  BuildInfo.md  BuiltinApi.md  CapacityEnum.md  ChampSelectLcdsGameDto.md  ChampSelectLcdsGameTimerDto.md  ChampSelectLcdsObfuscatedParticipant.md  ChampSelectLcdsPlayerChampionSelectionDto.md  ChampSelectLcdsPlayerParticipant.md  ChampSelectLcdsPointSummary.md  ChampSelectLcdsPotentialTradersDto.md  (+2125 more)
league-client/src/: lib.rs
league-client/src/apis/: builtin_api.rs  client.rs  configuration.rs  cookie_jar_api.rs  core_api.rs  data_store_api.rs  default_api.rs  logging_api.rs  mod.rs  performance_api.rs  plugin_asset_serving_api.rs  plugin_client_config_api.rs  plugin_entitlements_api.rs  plugin_gcloud_voice_chat_api.rs  plugin_lol_account_verification_api.rs  plugin_lol_acs_api.rs  plugin_lol_active_boosts_api.rs  plugin_lol_banners_api.rs  plugin_lol_career_stats_api.rs  plugin_lol_catalog_api.rs  plugin_lol_champ_select_api.rs  plugin_lol_champ_select_legacy_api.rs  plugin_lol_champions_api.rs  plugin_lol_chat_api.rs  plugin_lol_clash_api.rs  plugin_lol_clubs_api.rs  plugin_lol_clubs_public_api.rs  plugin_lol_collections_api.rs  plugin_lol_content_targeting_api.rs  plugin_lol_cosmetics_api.rs  plugin_lol_email_verification_api.rs  plugin_lol_end_of_game_api.rs  plugin_lol_esport_stream_notifications_api.rs  plugin_lol_game_client_chat_api.rs  plugin_lol_game_queues_api.rs  plugin_lol_game_settings_api.rs  plugin_lol_gameflow_api.rs  plugin_lol_gamhs_api.rs  plugin_lol_geoinfo_api.rs  plugin_lol_highlights_api.rs  (+69 more)
league-client/src/helpers/: mod.rs
league-client/src/models/: active_boosts_lcds_store_fulfillment_notification.rs  active_boosts_lcds_summoner_active_boosts_dto.rs  aggregation_type.rs  alert_dto.rs  all_public_summoner_data_dto.rs  all_summoner_data.rs  banned_champion.rs  base_player_dto.rs  base_public_summoner_dto.rs  basic_operating_system_info.rs  basic_system_info.rs  binding_async_cancel_event.rs  (+2048 more)
scripts/: postgres.bat
(+18 files in other folders)
