[package]
name = "crystal-core"
version = "0.1.0"
authors = ["Victor Quiroz <victorhqc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
futures = "0.1"
gotham = "0.4"
gotham_derive = "0.4"
gotham_middleware_diesel = "0.1"
http = "0.1"
hyper = "0.12"
lazy_static = "1.4"
league-client-connector = "0.1"
log = "0.4"
mime = "0.3"
notify = "4.0"
pretty_env_logger = "0.4"
tokio = "0.1"
tokio-threadpool = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[target.'cfg(unix)'.dependencies]
openssl-probe = "0.1.2"
openssl = "*"