[package]
name = "crystal-core"
version = "0.1.0"
authors = ["Victor Quiroz <victorhqc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.7"
dotenv = "0.15"
lazy_static = "1.4"
league-client-connector = "0.1.2"
league-client = { path = "../league-client" }
log = "0.4"
mime = "0.3"
native-tls = "0.2"
notify = "4.0"
reqwest = { version = "0.10.8", features = ["native-tls", "json", "blocking"]}
regex = "1.3.9"
route-recognizer = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
snafu = "0.6"
strum = "0.19"
strum_macros = "0.19"
websocket = "0.26.2"

[target."cfg(linux)".dependencies]
openssl-probe = "0.1.2"
openssl = "*"