[package]
name = "crystal-app"
version = "0.1.0"
description = "Crystal Application"
authors = [ "Victor Quiroz <victorhqc@gmail.com>" ]
license = ""
repository = ""
default-run = "crystal-app"
edition = "2018"
build = "src/build.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "0.9.2", features = [ "all-api" ] }

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "crystal-app"
path = "src/main.rs"
