[package]
name = "crystal-app"
version = "0.1.0"
description = "Crystal Application"
authors = [ "Victor Quiroz <victorhqc@gmail.com>" ]
license = ""
repository = ""
default-run = "crystal-app"
edition = "2018"
build = "src/build.rs"

[dependencies]
crossbeam = "0.7"
dotenv = "0.15"
lazy_static = "1.4"
log = "0.4"
pretty_env_logger = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "0.9.2", features = [ "all-api" ] }
crystal-core = { path = "../../crystal-core" }

[target."cfg(linux)".dependencies]
openssl-probe = "0.1.2"
openssl = "*"

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "crystal-app"
path = "src/main.rs"
